[package]
name = "gccjit"
version = "2.0.0"
authors = ["Sean Gillespie <sean.william.g@gmail.com>", "Antoni Boucher <bouanto@zoho.com>"]
description = "Higher-level Rust bindings for libgccjit."
keywords = ["compiler", "jit", "gcc"]
license = "GPL-3.0"
repository = "https://github.com/antoyo/gccjit.rs"
documentation = "https://docs.rs/gccjit/latest/gccjit/"
readme = "README.md"

[features]
master = ["gccjit_sys/master"]

[dependencies]
gccjit_sys = { version = "0.1.0", path = "gccjit_sys" }
