[package]
name = "gccjit_sys"
version = "0.1.0"
authors = ["Sean Gillespie <sean.william.g@gmail.com>", "Antoni Boucher <bouanto@zoho.com>"]
#links = "gccjit"
description = "Raw bindings to libgccjit. Companion to the gccjit crate."
keywords = ["compiler", "jit", "gcc"]
license = "GPL-3.0"
repository = "https://github.com/antoyo/gccjit.rs"

[features]
master = []

[dependencies]
libc = "0.2"
